# todo-api

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  __meta__.py  config.py  containers.py  extensions.py  schema.py
app/api/: __init__.py  todos.py
app/commands/: __init__.py
app/models/: __init__.py
app/service/: todo.py
app/swagger/: __init__.py
app/views/: __init__.py
migrations/versions/: 89ea936dd448_.py
