[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <pyunghyuk@likelion.net>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.1"
flask-swagger = "^0.2.14"
flask-cors = "^3.0.8"
flask-marshmallow = "^0.12.0"
flask-migrate = "^2.5.3"
psycopg2-binary = "^2.8.5"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
